--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -3,9 +3,8 @@
 
 
   <div class="row">
-        <!-- <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText"> -->
-        <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText">
-        <i class="fa fa-window-close-o" aria-hidden="true" ng-click="removeProduct(product.id)"></i>
+        <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText ">
+        <i class="fa fa-window-close-o" aria-hidden="true" ng-click="remove(contact.id)"></i>
           <div class="thumbnail">
 
             <!-- <img class="image" ng-src="{{product.image}}" alt="..." > -->
