fetching from api

--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -11,6 +11,8 @@
             <div class="caption">
               <h3>{{contact.name}}</h3>
               <p>{{contact.email}}</p>
+              <p>{{contact.phone}}</p>
+              <p>{{contact.website}}</p>
             </div>
           </div>
         </div>
