--- a/public/templates/addContactDirective.html
+++ b/public/templates/addContactDirective.html
@@ -15,7 +15,7 @@
 	    <form ng-show="showme">
 	        <h3>Add a new contact</h3>
 	        <div class="form-group">
-	            <input type="text" class="form-control" placeholder="Product Name" ng-model="contact.name"></input>
+	            <input type="text" class="form-control" placeholder="Contact Name" ng-model="contact.name"></input>
 	        </div>
 	        <div class="form-group">
 	            <input type="text" class="form-control" placeholder="Section" ng-model="contact.email"></input>
