--- a/public/templates/addContactDirective.html
+++ b/public/templates/addContactDirective.html
@@ -4,8 +4,8 @@
 		<div class="col-lg-6">
 			<button type="button" class="btn  ng-class:{'btn-success':!showme, 'btn-info':showme}	" ng-click="showme = !showme">{{showme ? 'Hide form' :  'Add Contact'}}</button>
 		</div>
-		<div class="col-lg-6">
-		    <div class="input-group">
+		<div class="col-lg-6 ">
+		    <div class="input-group align-right">
 		      <input type="text" class="form-control" placeholder="Search for..." ng-model="someRandomText">
 		    </div><!-- /input-group -->
 		  </div><!-- /.col-lg-6 -->
