--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+span.navbar-text.customText {
+    color: yellow;
+    margin-left: 170px;
+    text-transform: uppercase;
+    font-size: 15px
+}
+
 .header-contact {
 	margin-bottom: 50px;
 }
@@ -14,6 +21,11 @@ button.btn.btn-info.align {
     float: right;
 }
 
+.customInput{
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
 .customIn {
     display: block;
     margin-bottom: 20px;
@@ -21,6 +33,20 @@ button.btn.btn-info.align {
     font-size: 16px;
 }
 
+
+.thumbnail .caption {
+    padding: 9px;
+    color: #333;
+    cursor: pointer;
+}
+
+
+i.fa.fa-trash-o.fa-lg {
+    /*cursor: pointer;*/
+        float: right;
+}
+
+/*form validation */
 input.form-control.ng-pristine{
 	 background-color:#fff;
 }
@@ -34,3 +60,14 @@ input.ng-valid {
   input.ng-invalid {
     background-color: #CC7E7C;
   }
+
+
+@keyframes disappear {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
