--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,4 +1,9 @@
 <div class="container" >
+
+	<div class="row header-contact">
+		<button type="button" class="btn btn-primary"><a href="/#/contacts">BACK</a></button>
+	</div>
+
     <div class="row">
     	<h1>Lorem Ipsum</h1>
 		<h4>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h4>
