--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -1,20 +1,36 @@
 <div>
 
+ <div class="row">
+    <input type="text" name="write" placeholder="write some text" ng-model="$parent.text">
+  </div>
+
+<div class="customInput">
 <add-contact-dir></add-contact-dir>
+</div>
 
   <div class="row">
+      <!-- <div>{{messageadd}}</div> -->
         <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText ">
-        <i class="fa fa-window-close-o" aria-hidden="true" ng-click="remove(contact.id)"></i>
+        <i class="fa fa-trash-o fa-lg" aria-hidden="true" ng-click="remove(contact.id)"></i>
           <div class="thumbnail">
 
             <!-- <img class="image" ng-src="{{product.image}}" alt="..." > -->
-            <div class="caption">
+            <div class="caption ">
               <h3 ui-sref="contact({id: contact.id})" ng-click="" >{{contact.name}}</h3>
               <p>{{contact.email}}</p>
             </div>
           </div>
+
+
+          <div>{{test.newVal}}</div>
+          <div>{{test.oldVal}}</div>
+
         </div>
   </div>
+
+
+
+
 
 
 </div>
