--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,22 @@ button.btn.btn-info.align {
 
 i.fa.fa-trash-o.fa-lg {
     /*cursor: pointer;*/
-        float: right;
+        /*float: right;*/
+}
+
+
+.thumb-custom{
+    display: inline-block;
+    float: left;
+    padding-top: 7px;
+}
+
+.cont-style {
+  border-color: #e5e5e5 #eee #eee;
+    border-style: solid;
+    border-width: 1px 0;
+    -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+    box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
 }
 
 /*form validation */
