--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -1,11 +1,5 @@
 <div>
 
- <div class="row">
-    <div class="page-header">
-      <input type="text" name="write" placeholder="write text - testing ctrl's  " ng-model="$parent.text">
-    </div>
-  </div>
-
 <div class="customInput">
 <add-contact-dir></add-contact-dir>
 </div>
@@ -39,6 +33,14 @@
           <div>{{test.oldVal}}</div>
 
         </div>
+  </div>
+
+
+   <div class="row">
+    <div class="page-top">
+    <h4>testing brother controllers</h4>
+      <input type="text" name="write" placeholder="write text - testing ctrl's  " ng-model="$parent.text">
+    </div>
   </div>
 
 
