--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,18 @@ i.fa.fa-trash-o.fa-lg {
     box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
 }
 
+.page-top {
+    padding-bottom: 9px;
+    padding-top: 20px;
+    margin: 40px 0 20px;
+    border-top: 1px solid #eee;
+}
+
+
+.box-bottom {
+  height: 60px
+}
+
 /*form validation */
 input.form-control.ng-pristine{
 	 background-color:#fff;
