--- a/public/templates/addContactDirective.html
+++ b/public/templates/addContactDirective.html
@@ -2,7 +2,7 @@
 
 	<div class="row">
 		<div class="col-lg-6">
-			<button type="button" class="btn  ng-class:{'btn-success':!showme, 'btn-info':showme}	" ng-click="showme = !showme">{{showme ? 'Hide form' :  'Add Contact'}}</button>
+			<button type="button" class="btn  custom-btn ng-class:{'btn-success':!showme, 'btn-info':showme}	" ng-click="showme = !showme">{{showme ? 'Hide form' :  'Add Contact'}}</button>
 		</div>
 		<div class="col-lg-6 ">
 		    <div class="input-group align-right">
