--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -7,7 +7,7 @@
   <div class="row">
       <!-- <div>{{messageadd}}</div> -->
         <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText ">
-        <div class="icon-right"><i class="fa fa-trash-o fa-lg" aria-hidden="true" ng-click="remove(contact.id)"></i></div>
+        <i class="fa fa-trash-o fa-lg" aria-hidden="true" ng-click="remove(contact.id)"></i>
 
           <div class="thumbnail">
 
@@ -15,7 +15,7 @@
             <div class="caption ">
               <div class="thumb-custom">
               <div class="col-xs-6 col-md-3">
-                <a href="#" >
+                <a href="" >
                 <i class="fa fa-user-o fa-5x" aria-hidden="true"></i>
                   <!-- <img src="..." alt="..."> -->
                 </a>
