--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -17,8 +17,8 @@
 	</form>
 
 
-	<div>{{test.newVal}}</div>
-    <div>{{test.oldVal}}</div>
+	<!-- <div>{{test.newVal}}</div>
+    <div>{{test.oldVal}}</div> -->
 
 </div>
 
