--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -29,19 +29,19 @@
           </div>
 
 
-          <div>{{test.newVal}}</div>
-          <div>{{test.oldVal}}</div>
+          <!-- <div>{{test.newVal}}</div>
+          <div>{{test.oldVal}}</div> -->
 
         </div>
   </div>
 
 
-   <div class="row">
+   <!-- <div class="row">
     <div class="page-top">
     <h4>testing brother controllers</h4>
       <input type="text" name="write" placeholder="write text - testing ctrl's  " ng-model="$parent.text">
     </div>
-  </div>
+  </div> -->
 
 
 
