--- a/public/templates/contactProfileDirective.html
+++ b/public/templates/contactProfileDirective.html
@@ -1,16 +1,7 @@
-<div class="page-header">
+<div>
 
-	<div class="row header-contact">
-		<button type="button" class="btn btn-primary"><a href="/#/contacts">BACK</a></button>
-	</div>
-
-	<contact-profile-dir></contact-profile-dir>
-	<!-- <div contact-profile-dir></div> -->
-
-
-<!-- novalidate prevents HTML5 validation since we will be validating ourselves -->
-	<!-- <form name="contactForm" novalidate>
-
+	<form name="contactForm" novalidate>
+	<!-- novalidate prevents HTML5 validation since we will be validating ourselves -->
 		<button type="submit" class="btn btn-info align" ng-click="contactForm.$valid && edit(contact) " ng-hide="changeText">{{buttonText}}</button>
 
 		<h3 ng-hide="!editContact">{{contact.name}}</h3>
@@ -20,10 +11,6 @@
 	    <input type="email"  class="customIn" name="email"  type="text" ng-hide="editContact" ng-model="contact.email" required>
 	    <p class="help-block" ng-show="contactForm.email.$invalid">Valid Email Required</p>
 	</form>
- -->
 
-	<!-- <div>{{test.newVal}}</div>
-    <div>{{test.oldVal}}</div> -->
 
 </div>
-
