--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -5,7 +5,7 @@
 </div>
 
   <div class="row">
-      <!-- <div>{{messageadd}}</div> -->
+      <div>{{messageadd}}</div>
         <div class="col-sm-3 col-md-4" ng-repeat="contact in contacts | filter:someRandomText ">
         <i class="fa fa-trash-o fa-lg" aria-hidden="true" ng-click="remove(contact.id)"></i>
 
@@ -29,19 +29,19 @@
           </div>
 
 
-          <!-- <div>{{test.newVal}}</div>
-          <div>{{test.oldVal}}</div> -->
+          <div>{{test.newVal}}</div>
+          <div>{{test.oldVal}}</div>
 
         </div>
   </div>
 
 
-   <!-- <div class="row">
+   <div class="row">
     <div class="page-top">
     <h4>testing brother controllers</h4>
       <input type="text" name="write" placeholder="write text - testing ctrl's  " ng-model="$parent.text">
     </div>
-  </div> -->
+  </div>
 
 
 
