--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -4,12 +4,12 @@
 		<button type="button" class="btn btn-primary"><a href="/#/contacts">BACK</a></button>
 	</div>
 
-	<contact-profile-dir></contact-profile-dir>
+	<!-- <contact-profile-dir></contact-profile-dir> -->
 	<!-- <div contact-profile-dir></div> -->
 
 
 <!-- novalidate prevents HTML5 validation since we will be validating ourselves -->
-	<!-- <form name="contactForm" novalidate>
+	<form name="contactForm" novalidate>
 
 		<button type="submit" class="btn btn-info align" ng-click="contactForm.$valid && edit(contact) " ng-hide="changeText">{{buttonText}}</button>
 
@@ -20,10 +20,8 @@
 	    <input type="email"  class="customIn" name="email"  type="text" ng-hide="editContact" ng-model="contact.email" required>
 	    <p class="help-block" ng-show="contactForm.email.$invalid">Valid Email Required</p>
 	</form>
- -->
 
-	<!-- <div>{{test.newVal}}</div>
-    <div>{{test.oldVal}}</div> -->
+
 
 </div>
 
